--- a/de/download.po
+++ b/de/download.po
@@ -81,12 +81,16 @@ msgid ""
 "* [download for Linux from "
 "flathub](https://flathub.org/apps/details/chat.delta.desktop)"
 msgstr ""
+"* [Download für Linux von "
+"flathub](https://flathub.org/apps/details/chat.delta.desktop)"
 
 #: ../en/download.md:26
 msgid ""
 "* [download for Mac from our github release "
 "page](https://github.com/deltachat/deltachat-desktop/releases/).  "
 msgstr ""
+"* [Download für Mac von unserer Github Release "
+"Seite](https://github.com/deltachat/deltachat-desktop/releases/).  "
 
 #: ../en/download.md:28
 msgid ""
