--- a/uk/references.po
+++ b/uk/references.po
@@ -1,14 +1,14 @@
 # Translators:
-# björn petersen <r10s@b44t.com>, 2019
+# Iskatel Istiny <iskatel1@gmx.com>, 2019
 # 
 #, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-02-19 22:31+0200\n"
+"POT-Creation-Date: 2019-02-24 12:01+0200\n"
 "PO-Revision-Date: 2018-04-21 22:06+0000\n"
-"Last-Translator: björn petersen <r10s@b44t.com>, 2019\n"
+"Last-Translator: Iskatel Istiny <iskatel1@gmx.com>, 2019\n"
 "Language-Team: Ukrainian (https://www.transifex.com/delta-chat/teams/76181/uk/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -25,72 +25,89 @@ msgid ""
 "---"
 msgstr ""
 "---\n"
-"title: References\n"
+"title: Посилання\n"
 "layout: default-uk\n"
 "---"
 
 #: ../en/references.md:7
 msgid "# References"
-msgstr ""
+msgstr "# Посилання"
 
 #: ../en/references.md:10
 msgid ""
 "Although Delta Chat is still in beta state, there are already some interesting articles.\n"
 "Do we have missed something? Please [let us know](imprint)."
 msgstr ""
+"Delta Chat як і раніше у стадії бета, пропонуємо вам кілька цікавих статей.\n"
+"Ми щось упустили? Повідомте нам про це [let us know](imprint)."
 
 #: ../en/references.md:13
 msgid ""
 "## iX (German magazine): Dargereicht - Autocrypt automatisiert E-Mail-"
 "Kryptografie"
 msgstr ""
+"## iX (Журнал німецькою мовою): Dargereicht - Autocrypt automatisiert E"
+"-Mail-Kryptografie"
 
 #: ../en/references.md:16
 msgid ""
 "This article is about Autocrypt, the specification used by Delta Chat for end-to-end setup.\n"
 "Delta Chat is mentioned on the edge."
 msgstr ""
+"Стаття про специфікацію Autocrypt, що використовується в Delta Chat для наскрізного шифрування.\n"
+"Delta Chat згаданий на сторінці."
 
 #: ../en/references.md:18
 msgid ""
 "05/2018, page 64, <https://www.heise.de/select/ix/2018/5/1524784198472399>"
 msgstr ""
+"05/2018, сторінка 64, "
+"<https://www.heise.de/select/ix/2018/5/1524784198472399>"
 
 #: ../en/references.md:20
 msgid ""
 "## Linux User (German magazine): Private and Confidential - Privatvergnügen"
 msgstr ""
+"## Linux User (Журнал німецькою мовою): Private and Confidential - "
+"Privatvergnügen"
 
 #: ../en/references.md:22
 msgid ""
 "_\"Der pfiffige Messenger Delta Chat bietet eine interessante Alternative zu"
 " Datenkraken wie Whatsapp.\"_"
 msgstr ""
+"_\"Der pfiffige Messenger Delta Chat bietet eine interessante Alternative zu"
+" Datenkraken wie Whatsapp.\"_"
 
 #: ../en/references.md:24
 msgid ""
 "03/2018, page 84, <http://www.linux-community.de/Internal/Artikel/Print-"
 "Artikel/LinuxUser/2018/03/Privatvergnuegen>"
 msgstr ""
+"03/2018, сторінка 84, <http://www.linux-community.de/Internal/Artikel/Print-"
+"Artikel/LinuxUser/2018/03/Privatvergnuegen>"
 
 #: ../en/references.md:27
 msgid "## Hasecke (German blog): Mit Delta Chat per E-Mail chatten"
-msgstr ""
+msgstr "## Hasecke (Блог німецькою мовою): Mit Delta Chat per E-Mail chatten"
 
 #: ../en/references.md:29
 msgid ""
 "_\"Delta Chat funktioniert flüssig – als Messenger und als E-Mail-Client.\"_"
 msgstr ""
+"_\"Delta Chat funktioniert flüssig – als Messenger und als E-Mail-Client.\"_"
 
 #: ../en/references.md:31
 msgid "15.10.2017, <https://www.hasecke.eu/post/delta-chat/>"
-msgstr ""
+msgstr "15.10.2017, <https://www.hasecke.eu/post/delta-chat/>"
 
 #: ../en/references.md:34
 msgid ""
 "## Cloudette (German blog): Delta Chat – ein neuer Star am Messenger-"
 "Himmel?!"
 msgstr ""
+"## Cloudette (Блог німецькою мовою): Delta Chat – ein neuer Star am "
+"Messenger-Himmel?!"
 
 #: ../en/references.md:36
 msgid ""
@@ -98,9 +115,14 @@ msgid ""
 "vorstellen, dass ich damit nach und nach alle anderen Chat Messenger ablösen"
 " kann [...]\"_"
 msgstr ""
+"_\"Für mich sieht das Ganze bisher sehr sehr gut aus und ich könnte mir "
+"vorstellen, dass ich damit nach und nach alle anderen Chat Messenger ablösen"
+" kann [...]\"_"
 
 #: ../en/references.md:37
 msgid ""
 "03.08.2017, <https://cloudette.net/2017/08/03/delta-chat-ein-neuer-star-am-"
 "messenger-himmel/>"
 msgstr ""
+"03.08.2017, <https://cloudette.net/2017/08/03/delta-chat-ein-neuer-star-am-"
+"messenger-himmel/>"
